--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ margin:0px;
 
 }
 body{
-    background: url(../img/hero.jpg);
+    background: url(img/hero.jpg);
     background-color: rgb(0, 0, 0);
     background-position: center;
     background-attachment: fixed;
