--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
 /*-----------------------------------------------------Index------------------------------------------------------------*/
-*{
-margin:0px;
-
-}
-body{
+.homepage {
     background: url(img/hero.jpg);
     background-color: rgb(0, 0, 0);
     background-position: center;
     background-attachment: fixed;
 }
+
 li a .nav-link{color:red;}
 
 .homepage, footer a {
@@ -36,3 +33,8 @@ footer {
 }
 /*----------------------------------------------------/Index------------------------------------------------------------*/
 
+/*-----------------------------------------------------Contact------------------------------------------------------------*/
+.contact-template, .message-template {
+    padding: 3rem;
+}
+/*----------------------------------------------------/Contact------------------------------------------------------------*/
