Added new files

--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@
     background: goldenrod;
 }
 
-.hero-btn:hover{
-background: black;
-color:white;
+.hero-btn:hover {
+    background: black;
+    color:white;
 }
 
 footer {
@@ -33,3 +33,19 @@ footer {
     padding: 3rem;
 }
 /*----------------------------------------------------/Contact------------------------------------------------------------*/
+
+/*-----------------------------------------------------LoginForm------------------------------------------------------------*/
+.loginform {
+    padding: 12rem 24rem;
+}
+.loginbtn {
+    width: 8rem;
+}
+
+/*----------------------------------------------------/LoginForm------------------------------------------------------------*/
+
+/*-----------------------------------------------------RegisterForm------------------------------------------------------------*/
+.registerform {
+    padding: 3rem 24rem;
+}
+/*----------------------------------------------------/RegisterForm------------------------------------------------------------*/
