--- a/style.css
+++ b/style.css
@@ -41,7 +41,9 @@ footer {
 .loginbtn {
     width: 8rem;
 }
-
+.error {
+    color: red;
+}
 /*----------------------------------------------------/LoginForm------------------------------------------------------------*/
 
 /*-----------------------------------------------------RegisterForm------------------------------------------------------------*/
