--- a/style.css
+++ b/style.css
@@ -55,3 +55,9 @@ footer {
     padding: 3rem 24rem;
 }
 /*----------------------------------------------------/RegisterForm------------------------------------------------------------*/
+/*---------------------------------------------------menu-----------------------------------------*/
+.hero-title h2 {
+text-align:center;
+border:double solid;
+}
+/*---------------------------------------------------/menu-----------------------------------------*/
