--- a/style.css
+++ b/style.css
@@ -58,6 +58,6 @@ footer {
 /*---------------------------------------------------menu-----------------------------------------*/
 .hero-title h2 {
 text-align:center;
-border:double solid;
+border:double solid red;
 }
 /*---------------------------------------------------/menu-----------------------------------------*/
