--- a/style.css
+++ b/style.css
@@ -5,26 +5,43 @@
     background-position: center;
     background-attachment: fixed;  
     color: #fff;
+    font-family:cursive;
 }
 .quote {
     padding-top: 1.2em;
     padding-bottom: 0.5em;
-    font-family:cursive;
     font-size: 6em;
 }
-.hero-btn{
+.btn{
     background: goldenrod;
 }
 
-.hero-btn:hover {
+.btn:hover {
     background: black;
     color:white;
 }
-.third-tray{
-    background: #75717179;
+.titles{
+    font-family:cursive;
 }
-.Reservation,.map{
-    background: #fff;
+.second-tray{
+padding: 2em 0;
+}
+.third-tray-con{
+    line-height:2.8;
+    font-size: 18px;
+    font-weight: bold;
+    color:#fff; 
+}
+.icons{
+color:goldenrod;
+}
+.third-tray{
+    background:url(./img/thirdtray.png);
+    background-attachment: fixed;
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    font-family:cursive;
+    padding: 4em 0;
 }
 footer {
     font-size: 1.25rem;
@@ -38,7 +55,7 @@ footer {
 }
 /*----------------------------------------------------/Contact------------------------------------------------------------*/
 
-/*-----------------------------------------------------LoginForm------------------------------------------------------------*/
+/*-----------------------------------------------------Login----------------------------------------------------------------*/
 .loginform {
     padding: 12rem 24rem;
 }
@@ -48,16 +65,16 @@ footer {
 .error {
     color: red;
 }
-/*----------------------------------------------------/LoginForm------------------------------------------------------------*/
+/*----------------------------------------------------/Login----------------------------------------------------------------*/
 
-/*-----------------------------------------------------RegisterForm------------------------------------------------------------*/
-.registerform {
+/*-----------------------------------------------------Register---------------------------------------------------------------*/
+.register {
     padding: 3rem 24rem;
 }
-/*----------------------------------------------------/RegisterForm------------------------------------------------------------*/
-/*---------------------------------------------------menu-----------------------------------------*/
+/*----------------------------------------------------/Register---------------------------------------------------------------*/
+/*----------------------------------------------------------Menu--------------------------------------------------------------*/
 .hero-title h2 {
 text-align:center;
-border:double solid red;
+border:double solid;
 }
-/*---------------------------------------------------/menu-----------------------------------------*/
+/*---------------------------------------------------------/Menu--------------------------------------------------------------*/
