--- a/style.css
+++ b/style.css
@@ -78,3 +78,26 @@ text-align:center;
 border:double solid;
 }
 /*---------------------------------------------------------/Menu--------------------------------------------------------------*/
+.menu{
+    background:url(./img/hero.jpg);
+    background-attachment: fixed;
+    font-family:cursive;
+    padding: 4.3em 0;
+    color:#fff;
+}
+.menu-heading{
+    padding-top:0.8em;
+}
+.menu-nev-a{
+    color:darkgoldenrod;
+    transition: 0.5s;
+    text-decoration: none !important;
+    font-weight: bold;
+    padding-top:3em; 
+}
+.menu-nev-a:hover{
+    color:rgb(197, 144, 9);
+    transition: 0.5s;
+    border-bottom:3px solid rgb(209, 152, 8);
+}
+/*---------------------------------------------------------/Menu--------------------------------------------------------------*/
