--- a/style.css
+++ b/style.css
@@ -1,41 +1,66 @@
-/*-----------------------------------------------------Index------------------------------------------------------------*/
-.homepage {
+.first-tray {
     background: url(img/hero.jpg);
     background-color: rgba(0, 0, 0, 0.61);
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: fixed;  
     color: #fff;
-}
-
-.quote {
-    padding-top: 1.2em;
-    padding-bottom: 0.5em;
     font-family:cursive;
-    font-size: 6em;
 }
-.hero-btn{
+.quote {
+    padding-top: 1.5em;
+    padding-bottom: 1em;
+    font-size: 5em;
+}
+.btn {
     background: goldenrod;
+    color: #000;
+}
+.btn:hover {
+    background: #000;
+    color:#fff;
+}
+.titles {
+    font-family:cursive;
+    padding: 1em 0;
+}
+.second-tray {
+    padding: 0 0 4em;
+}
+.third-tray-con {
+    line-height:2.8;
+    font-size: 18px;
+    font-weight: bold;
+    color:#fff; 
+}
+.third-tray {
+    background:url(./img/thirdtray.png);
+    background-attachment: fixed;
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    font-family:cursive;
+    padding: 4em 0;
+}
+a.nav-link.menu-lnk {
+    font-size: 1.3em;
+}
+a.nav-link.menu-lnk:after {
+    content: '';
+    width: 0; 
+    height: 3px;
+    display: block;
+    margin-top: 5px;
+    right: 0;
+    background: #fff;
+    transition: width .3s ease;
+}
+a.nav-link.menu-lnk:hover:after {
+  width: 100%;
+  left: 0;
+  background: #fff;
 }
 
-.hero-btn:hover {
-    background: black;
-    color:white;
-}
 
-footer {
-    font-size: 1.25rem;
-    background: #00000079;
-}
-/*----------------------------------------------------/Index------------------------------------------------------------*/
-
-/*-----------------------------------------------------Contact------------------------------------------------------------*/
-.contact-template, .message-template {
-    padding: 3rem;
-}
-/*----------------------------------------------------/Contact------------------------------------------------------------*/
-
-/*-----------------------------------------------------LoginForm------------------------------------------------------------*/
-.loginform {
+.login {
     padding: 12rem 24rem;
 }
 .loginbtn {
@@ -44,10 +69,64 @@ footer {
 .error {
     color: red;
 }
-/*----------------------------------------------------/LoginForm------------------------------------------------------------*/
 
-/*-----------------------------------------------------RegisterForm------------------------------------------------------------*/
-.registerform {
+
+.register {
     padding: 3rem 24rem;
 }
-/*----------------------------------------------------/RegisterForm------------------------------------------------------------*/
+
+
+.table-contain {
+    padding: 2em 10em;
+}
+
+.hero-title h2 {
+    text-align:center;
+    border:double solid;
+}
+.menu {
+    background:url(./img/hero.jpg);
+    background-attachment: fixed;
+    font-family:cursive;
+    padding: 4.3em 0;
+    color:#fff;
+}
+.menu-heading {
+    padding-top:0.8em;
+}
+.menu-nev-a {
+    color:darkgoldenrod;
+    transition: 0.5s;
+    text-decoration: none !important;
+    font-weight: bold;
+    padding-top:3em; 
+}
+.menu-nev-a:hover {
+    color:rgb(197, 144, 9);
+    transition: 0.5s;
+    border-bottom:3px solid rgb(209, 152, 8);
+}
+.menu-dish li {
+    list-style: none;
+    display: inline-block;
+    border:2px solid black;
+    margin-top: 10px;
+}
+.menu-font {
+    font-family: cursive;
+}
+
+.dish-head {
+    background: #000000c2;
+    color:white;
+    transition: all .2s ease-in-out;
+ }
+
+.dish-head:hover { transform: scale(1.1);
+    background: goldenrod;
+}
+
+hr {
+    border-top:10px solid grey;
+    height:8px;
+}
