--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ hr {
     height:8px;
 }
 /* contact */
-.CONTECT{
+.CONTACT{
     background:url(./img/contect-hero.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
